kubernetes/04-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: kafka
spec:
  ports:
  - port: 9092
  selector:
    app: kafka-broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-broker
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      hostname: kafka-broker
      containers:
      - env:
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper-service.kafka.svc.cluster.local:2181
        - name: KAFKA_LISTENERS
          value: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
        - name: KAFKA_ADVERTISED_LISTENERS
          value: INSIDE://kafka-service.kafka.svc.cluster.local:9092,OUTSIDE://localhost:9093
        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
          value: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
        - name: KAFKA_INTER_BROKER_LISTENER_NAME
          value: INSIDE
        - name: KAFKA_CREATE_TOPICS
          value: "CircularNoFlyZone:1:1,PolygonNoFlyZone:1:1,FlightLocationData:1:1"
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        name: kafka-broker
        ports:
        - containerPort: 9092
