kubernetes/05-apps.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: consumer-app
  labels:
    app: consumer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-app
  template:
    metadata:
      labels:
        app: consumer-app
    spec:
      hostname: consumer-app
      containers:
      - name: consumer-app
        image: ewagner2802/flighttrackerconsumer:latest
        ports:
            - containerPort: 5000
              name: consumer
            - containerPort: 4000
              name: websocket
---
kind: Service
apiVersion: v1
metadata:
  name: consumer-service
  labels:
    app: consumer-app
spec:
  selector:
    app: consumer-app
  ports:
  - name: main
    port: 5000
  - name: socket
    port: 4000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: producer-app
  labels:
    app: producer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-app
  template:
    metadata:
      labels:
        app: producer-app
    spec:
      hostname: producer-app
      containers:
      - name: producer-app
        image: ewagner2802/flighttrackerproducer:latest
        ports:
          - containerPort: 6000 
---
kind: Service
apiVersion: v1
metadata:
  name: producer-service
  labels:
    app: producer-app
spec:
  selector:
    app: producer-app
  ports:
  - name: main
    port: 6000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-app
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      hostname: frontend-app
      containers:
      - name: frontend-app
        image: ewagner2802/flighttrackerfrontend:latest
        ports:
            - containerPort: 80

              name: consumer
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  labels:
    app: frontend-app
spec:
  selector:
    app: frontend-app
  ports:
  - name: main
    port: 8080
    targetPort: 80
---
