kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flighttracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/producer(/|$)(.*)
        backend:
          service:
            name: producer-service
            port:
              number: 6000
      - pathType: ImplementationSpecific
        path: /api/consumer(/|$)(.*)
        backend:
          service:
            name: consumer-service
            port:
              number: 5000
      - pathType: ImplementationSpecific
        path: /()(socket.io/.*)
        backend:
          service:
            name: consumer-service
            port:
              number: 4000
      - pathType: ImplementationSpecific
        path: /()(.*)
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
---
